# vaccel-grpc

./: Cargo.toml
protos/: agent.proto  genop.proto  resources.proto  torch.proto
src/: agent.rs  agent_ttrpc.rs  genop.rs  lib.rs  profiling.rs  resources.rs  torch.rs
