[package]
name = "protocols"
version = "0.3.2"
authors = ["Babis Chalios <mail@bchalios.io>", "Kostis Papazafeiropoulos <papazof@gmail.com>", "Anastassios Nanos <ananos@nubificus.co.uk>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ttrpc = { version = "0.6.1" }
protobuf = "2.28.0"

[build-dependencies]
ttrpc-codegen = "0.2.0"
